# thqm

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yml
examples/: media_control  media_control_fa_grid  thqm-media  thqm-media-fa
ht_server/: event.py  main.py
rc_server/: __main__.py  parser.py  server.py
rc_server/static/: index.css
rc_server/templates/: index.html
tests/: test_server.py  test_utils.py
thqm/: __cli__.py  __init__.py  __main__.py  auth.py  event.py  http_handler.py  parser.py  server.py  settings.py  utils.py
thqm/static/: index.css
thqm/styles/default/static/: index.css
thqm/styles/default/template/: index.html
thqm/styles/fa-grid/static/: index.css
thqm/styles/fa-grid/template/: index.html
thqm/templates/: index.html
