[tool.poetry]
name = "thqm"
version = "1.1.1"
description = "remote command execution made easy."
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
classifiers = [
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Utilities",
    "Topic :: Home Automation",
    "Operating System :: Microsoft :: Windows"
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
]
repository = "https://github.com/loiccoyle/thqm"
readme = "README.md"
keywords = ["remote", "command", "HTTP-server", "thqm"]

[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "^2.11.2"
pyqrcode = { version = "^1.2.1", optional = true }

[tool.poetry.extras]
qrcode = ["pyqrcode"]

[tool.poetry.scripts]
thqm = 'thqm.__cli__:main'

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
