[tool.poetry]
name = "thqm"
version = "1.4.0"
description = "remote command execution made easy."
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
classifiers = [
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Utilities",
    "Topic :: Home Automation",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
]
repository = "https://github.com/loiccoyle/thqm"
readme = "README.md"
keywords = ["remote", "command", "HTTP-server", "thqm"]

[tool.poetry.dependencies]
python = ">=3.6.1"
jinja2 = "^3.0.0"
pyqrcode = { version = "^1.2.1", optional = true }
pypng = { version = "^0.0.20", optional = true }
netifaces = "^0.11.0"

[tool.poetry.extras]
qrcode = ["pyqrcode", "pypng"]

[tool.poetry.scripts]
thqm = 'thqm.__cli__:main'

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
